contrast fix and improved aria-label

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,7 @@
 	--color-yellow-light: #fbe6bc;
 	--color-green-light: #29d398;
 	--color-blue-light: #26bbd9;
-	--color-purple-light: #b877db;
+	--color-purple-light: #ddaeea;
 	--color-grey-light: #b9c3c6;
 
 	--color-red-dark: #991433;
